Clicking the X in a filter bar in a pop up dialog doesn't clear. #76635

Closed
opened 2020-05-11 09:11:58 +02:00 by Ryan Inch · 4 comments
Member

System Information
Operating system: Linux-5.6.5-arch3-1-x86_64-with-arch 64 Bits
Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-11 05:23, hash: 0461727553
Worked: 2.80 (partially)

Short description of error
The X on the filter bar/text field does not clear the field when the field is in a pop up dialog.

Exact steps for others to reproduce the error

  • Enable the Icon Viewer addon
  • Open the icon viewer.
  • Type something into the filter bar.
  • Press the X.
  • The X disappears, but the field is not cleared.

This partially works in blender 2.80; it clears properly if you finish editing and then click the X, but if you try to clear the field with the X while still editing it the X doesn't do anything.
Note: blender 2.83 doesn't display the X while still editing like 2.80 did.

This isn't specific to the Icon Viewer addon, it seems to affect all popups because it's also present in the filter bar for the Collection Manager addon.
This bug is present whether the popup dialog is from invoke_props_dialog or invoke_popup.

**System Information** Operating system: Linux-5.6.5-arch3-1-x86_64-with-arch 64 Bits Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-11 05:23, hash: `0461727553` Worked: 2.80 (partially) **Short description of error** The X on the filter bar/text field does not clear the field when the field is in a pop up dialog. **Exact steps for others to reproduce the error** * Enable the Icon Viewer addon * Open the icon viewer. * Type something into the filter bar. * Press the X. * The X disappears, but the field is not cleared. This partially works in blender 2.80; it clears properly if you finish editing and then click the X, but if you try to clear the field with the X while still editing it the X doesn't do anything. Note: blender 2.83 doesn't display the X while still editing like 2.80 did. This isn't specific to the Icon Viewer addon, it seems to affect all popups because it's also present in the filter bar for the Collection Manager addon. This bug is present whether the popup dialog is from `invoke_props_dialog` or `invoke_popup`.
Author
Member

Added subscriber: @Imaginer

Added subscriber: @Imaginer

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 36e3847093

This issue was referenced by 36e3847093546232db3f16da9189ab7f30207126
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-05-12 20:43:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76635
No description provided.